add power products

--- a/data-analysis/1-approaches-for-problems/5-finding-insights.ipynb
+++ b/data-analysis/1-approaches-for-problems/5-finding-insights.ipynb
@@ -491,18 +491,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Low hanging fruit"
+    "### Opportunities and Threats\n",
+    "\n",
+    "Now we still have some additional columns to explore, but for the sake of this reading let's move on as we can already gather some insights.  Let's summarize the broader strengths and weaknesses.\n",
+    "\n",
+    "* Strengths: Purchasing by membership customers\n",
+    "* Weaknesses: Purchasing by non-members, and potentially acquisition of new customers.\n",
+    "\n",
+    "We probably want to do more analysis to learn more about each of these potential trends.  But, under time constraints, this is what the evidence suggests.\n",
+    "\n",
+    "There are a couple of actions/questions we can take moving forward:\n",
+    "\n",
+    "* Threats\n",
+    "    * Learn more about customer acquisition.  We must have acquired customers at some point, so what changed?  How do members and non-members perceive the company diferently?\n",
+    "    * Losing our members. Members are critical part of our business, and is keeping our business afloat.  We should find out how to cater to them so we don't lose them.\n",
+    "* Opportunities\n",
+    "    * Can we grow membership?  We should look at the membership funnel to see how to go from acquiring new customers, to then converting them to members.\n",
+    "    * Can we extract more revenue from existing members?\n",
+    "\n",
+    "Finally, we can keep in mind our strongest products and product categories.  Shirts, Jeans, and face cream."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The above of identifying strengths, weaknesses, opportunities and threats is called **SWOT analysis**, and can come in handy when thinking through a business."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "In this lesson, we saw that we can use the functions we built in the previous lesson to **start broad and go narrow**, getting an overview of the business.  We then began to identify a couple of key findings to look at further.  In short, we saw that our business currently relies on existing members but does not appear to be acquiring new ones.  \n",
+    "\n",
+    "We used SWOT analysis to identify the threats and opportunities coming from that.  Finally, we summarized our popular product lines.  "
+   ]
   }
  ],
  "metadata": {
