--- a/data-analysis/1-approaches-for-problems/3-extracting-data.ipynb
+++ b/data-analysis/1-approaches-for-problems/3-extracting-data.ipynb
@@ -630,6 +630,177 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97964d2e",
+   "metadata": {},
+   "source": [
+    "Ok, now let's load the data into our database.  We'll do so by creating a new table called transactions -- instead of `raw_transactions`.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b1203e53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "535"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_with_date_time_cols.to_sql('transactions', conn, if_exists = 'replace')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43f4420b",
+   "metadata": {},
+   "source": [
+    "And we can confirm that our new data was loaded into the transactions table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "537d13f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>device_type</th>\n",
+       "      <th>country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th>category</th>\n",
+       "      <th>...</th>\n",
+       "      <th>delivery_type</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>transaction_start</th>\n",
+       "      <th>transaction_result</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>individual_price</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>dow</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>40170</td>\n",
+       "      <td>1348959766</td>\n",
+       "      <td>Hair Band</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>...</td>\n",
+       "      <td>one-day deliver</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6910.0</td>\n",
+       "      <td>576.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>33374</td>\n",
+       "      <td>2213674919</td>\n",
+       "      <td>Hair Band</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Los Angles</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>...</td>\n",
+       "      <td>one-day deliver</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1699.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  transaction_id  customer_id    product  gender device_type  \\\n",
+       "0      0           40170   1348959766  Hair Band  Female         Web   \n",
+       "1      1           33374   2213674919  Hair Band  Female         Web   \n",
+       "\n",
+       "         country       state           city     category  ...  \\\n",
+       "0  United States    New York  New York City  Accessories  ...   \n",
+       "1  United States  California     Los Angles  Accessories  ...   \n",
+       "\n",
+       "     delivery_type quantity  transaction_start  transaction_result  amount  \\\n",
+       "0  one-day deliver       12                  1                   0  6910.0   \n",
+       "1  one-day deliver       17                  1                   1  1699.0   \n",
+       "\n",
+       "   individual_price  month  week  dow  hour  \n",
+       "0             576.0   11.0  46.0  4.0  22.0  \n",
+       "1             100.0    5.0  19.0  6.0   6.0  \n",
+       "\n",
+       "[2 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions_df = pd.read_sql('select * from transactions', conn)\n",
+    "transactions_df[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "819e97cc-49c6-4c58-80d3-31eef384e1bb",
    "metadata": {},
    "source": [
