add funnel analysis

--- a/data-analysis/2-willy-wonka/5-funnel-analysis.ipynb
+++ b/data-analysis/2-willy-wonka/5-funnel-analysis.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading Data"
+    "### Making initial selections"
    ]
   },
   {
@@ -39,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Write a query to select the line item that is the first line item of users who have multiple line items."
+    "* Finding what leads to repeat purchases\n",
+    "\n",
+    "Write a query to select the line item that is the first line item of users who have multiple line items."
    ]
   },
   {
@@ -171,7 +173,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> What are some issues with the query above.  What should we do to improve it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Finding causes of attrition\n",
+    "\n",
     "Then write a query to select the last line item of purchases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>list_sku</th>\n",
+       "      <th>list_sku_category</th>\n",
+       "      <th>list_sku_flavor</th>\n",
+       "      <th>order_value</th>\n",
+       "      <th>running_order_count</th>\n",
+       "      <th>total_order_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SKU-3013</td>\n",
+       "      <td>Granola Bar</td>\n",
+       "      <td>Peanut Butter</td>\n",
+       "      <td>25.450311</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   list_sku list_sku_category list_sku_flavor  order_value  \\\n",
+       "0  SKU-3013       Granola Bar   Peanut Butter    25.450311   \n",
+       "\n",
+       "   running_order_count  total_order_count  \n",
+       "0                    1                  1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "WITH orders_count AS (\n",
+    "    SELECT list_sku, list_sku_category, list_sku_flavor, order_value,\n",
+    "       COUNT(user_id) OVER\n",
+    "         (PARTITION BY user_id ORDER BY order_date)\n",
+    "         AS running_order_count,\n",
+    "        COUNT(user_id) OVER\n",
+    "         (PARTITION BY user_id)\n",
+    "         AS total_order_count\n",
+    "  FROM raw_orders\n",
+    ")\n",
+    "select * from orders_count \n",
+    "where running_order_count = total_order_count\n",
+    "\"\"\"\n",
+    "\n",
+    "last_purchase_df = pd.read_sql(query, engine)\n",
+    "\n",
+    "last_purchase_df[:1]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Doing analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have selected the relevant line items, again use the group and print functions to see the differences in the kinds of products that are associated with more purchases, as opposed to those that are the last purchase by a user."
    ]
   },
   {
@@ -235,39 +342,6 @@
     "from lib import product_cols\n",
     "\n",
     "group_and_print(first_for_repurchases_df, product_cols)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Attrition:\n",
-    "\n",
-    "* What is the last purchase of users, in comparison to typical purchases.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "WITH orders_count AS (\n",
-    "    SELECT list_sku, list_sku_category, list_sku_flavor, order_value,\n",
-    "       COUNT(user_id) OVER\n",
-    "         (PARTITION BY user_id ORDER BY order_date)\n",
-    "         AS running_order_count,\n",
-    "        COUNT(user_id) OVER\n",
-    "         (PARTITION BY user_id)\n",
-    "         AS total_order_count\n",
-    "  FROM raw_orders\n",
-    ")\n",
-    "select * from orders_count \n",
-    "where running_order_count = total_order_count\n",
-    "\"\"\"\n",
-    "\n",
-    "last_purchase_df = pd.read_sql(query, engine)\n"
    ]
   },
   {
@@ -335,7 +409,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Thoughts\n",
+    "### Findings\n",
+    "\n",
+    "Write some findings below.\n",
     "\n",
     "* Granola is often the last item purchased, but it is also an item of non-power users.  So unclear if there's cause and effect here.  Could be that casual users buy the granola bars.\n",
     "\n",
